test/compile_errors/stage1/obj/invalid_continue_expression.zig
export fn f() void {
    continue;
}

// invalid continue expression
//
// tmp.zig:2:5: error: continue expression outside loop
